# dbmaster

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aagenti.pl  astorei.pl  config.status  configure  configure.ac  dbmaster.conf.example  dbmaster.pl  dbmaster.pl.pre  dbmaster.service  dbmaster.service.in  dbmaster.sql  pgagent  pgagent.crt.example  pgagent.key.example  pgagent.pl  pgagent.pw.example  pgagent.service  pgagent.service.in  pgdumper.in  pgmaster  pgmaster.pl  pgmaster.pl.pre  pgmaster.sed  pgmaster.service  pgmaster.service.in  pgmaster.sql  pgstore  pgstore.crt.example  pgstore.key.example  pgstore.pl  pgstore.pl.pre  pgstore.pw.example  pgstore.service  pgstore.service.in  schema.sql  (+1 more)
debian/: changelog  control  files
debian/source/: include-binaries
docs/: dbmaster.dia
init.d/: dbmaster  dbmaster.in
public/css/: datatables.css  foundation.css  foundation.min.css
rc.d/: dbmaster  dbmaster.in  pgagent  pgagent.in  pgmaster  pgmaster.in  pgstore  pgstore.in
templs/: agent-add-form.html.ep  agent-add-handler.html.ep  agent-delete-form.html.ep  agent-delete-handler.html.ep  agent-list.html.ep  agent-rename-form.html.ep  agent-rename-handler.html.ep  agent-update-form.html.ep  agent-update-handler.html.ep  agentConfig.html.ep  agentDBDrop.html.ep  agentDBDump.html.ep  agentDBRestore.html.ep  agentDelete.html.ep  agent_add.html.ep  agent_config.html.ep  agent_db_copy.html.ep  agent_db_create.html.ep  agent_db_drop.html.ep  agent_db_dump.html.ep  agent_db_list.html.ep  agent_db_rename.html.ep  agent_db_restore.html.ep  agent_db_restore_.html.ep  agent_delete.html.ep  agent_list.html.ep  data-delete-form.html.ep  data-delete-handler.html.ep  data-list.html.ep  data_list.html.ep  db-create-form.html.ep  db-create-handler.html.ep  db-drop-form.html.ep  db-drop-handler.html.ep  db-dump-form.html.ep  db-dump-handler.html.ep  db-list.html.ep  db-rename-form.html.ep  db-rename-handler.html.ep  db-restore-form.html.ep  (+35 more)
templs/layouts/: default.html.ep
works/: cron.pl  dumper.sql  get-json.pl  hello-w-subprosess.pl  json.pl  label-parse.pl  loop.pl  microapp.pl  mojo-get.pl  mojo-get2.pl  mojo-uploader.pl  pgdump-all.pl  scheduler.pl  server2.pl  size.pl  ssh.pl  sub.pl  switch.pl  tail-oop.pl  tail.pl  time.pl
